--- a/src/app.html
+++ b/src/app.html
@@ -1,9 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, viewport-fit=cover"
+    />
     <title>Tauri + SvelteKit + Typescript App</title>
     %sveltekit.head%
   </head>
