--- a/src/app.html
+++ b/src/app.html
@@ -3,10 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
-    <meta
-      name="viewport"
-      content="width=device-width, user-scalable=no, viewport-fit=cover"
-    />
+    <meta name="viewport" content="width=device-width, user-scalable=no" />
     <title>Tauri + SvelteKit + Typescript App</title>
     %sveltekit.head%
   </head>
