--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
-    <meta name="viewport" content="width=device-width, user-scalable=no" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, viewport-fit=cover"
+    />
     <title>Tauri + SvelteKit + Typescript App</title>
     %sveltekit.head%
   </head>
