--- a/src/app.html
+++ b/src/app.html
@@ -10,10 +10,7 @@
     <title>Tauri + SvelteKit + Typescript App</title>
     %sveltekit.head%
   </head>
-  <body
-    data-sveltekit-preload-data="hover"
-    class="border-border bg-background text-foreground h-screen font-sans antialiased select-none"
-  >
+  <body data-sveltekit-preload-data="hover">
     <div style="display: contents">%sveltekit.body%</div>
   </body>
 </html>
